directives and bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<h1>{{heading|uppercase}}</h1>
-<h3>Name of the Trainer is {{name}}</h3>
-<h3>Name of the session is {{Session}}</h3>
-<app-bbbody></app-bbbody>
-
-<app-bbfooter></app-bbfooter>
+<app-bbheader></app-bbheader>
+<app-bbstudents></app-bbstudents>
