--- a/src/app/bbbody/bbbody.component.html
+++ b/src/app/bbbody/bbbody.component.html
@@ -7,7 +7,7 @@
 
 <form>
     <label>Enter your full name</label>
-    <input type="text" [formControl]="username">
+   <!-- <input type="text" [formControl]="username"> -->
 
     <br>    
     <label>you entered : {{username.value}}</label>
