--- a/src/app/bbheader/bbheader.component.html
+++ b/src/app/bbheader/bbheader.component.html
@@ -1,3 +1,3 @@
 <!-- <h1>Here you can get Even numbers only</h1> -->
 
-<h1>List of Students</h1>
+<h1 class="bg-danger text-center text-uppercase text-warning">Get Your fav Bike</h1>
