--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-bbheader></app-bbheader>
-<app-bbbikes></app-bbbikes>
+
+<app-bbevenodd></app-bbevenodd>
+<h1>The Developer of this website is : {{title}}</h1>
+<app-bbbody></app-bbbody>
