--- a/src/app/bbbody/bbbody.component.html
+++ b/src/app/bbbody/bbbody.component.html
@@ -6,7 +6,7 @@
 <br>
 
 <form>
-    <label>Enter your full name</label>
+    <label highlightme>Enter your full name</label>
    <!-- <input type="text" [formControl]="username"> -->
 
     <br>    
@@ -15,7 +15,7 @@
 
     <button (click)="changevalue()">Change to Default</button>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis accusantium dolorum nobis consectetur quidem voluptas recusandae vel, perspiciatis optio sequi deleniti odit, quo asperiores minima praesentium! Nobis qui asperiores nam.
+<p highlightme>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis accusantium dolorum nobis consectetur quidem voluptas recusandae vel, perspiciatis optio sequi deleniti odit, quo asperiores minima praesentium! Nobis qui asperiores nam.
 Quam, nihil necessitatibus. Quae, hic debitis. Temporibus voluptatibus alias iste in aliquid beatae ipsa, quis impedit? Consequuntur, fuga iste. Consectetur omnis a debitis ab quidem praesentium? Aliquam officiis adipisci eos?
 Consequuntur soluta, quis est, sed impedit deserunt aliquid, quasi necessitatibus delectus nostrum tempore commodi dolorem atque fuga? Ut dolores nobis neque nemo repudiandae voluptatem, ea corrupti cumque ad id doloribus.
 Dolorem reiciendis minus numquam ut dignissimos deleniti veritatis, error, ipsum quod earum officia maiores, dolores perferendis magni sint sed explicabo asperiores nostrum molestiae suscipit! Rem earum itaque ullam alias exercitationem?
